<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="213dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241">

        <RadioButton
            android:id="@+id/radioArquero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioArquero" />

        <RadioButton
            android:id="@+id/radioGuerrero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioGuerrero" />

        <RadioButton
            android:id="@+id/radioMago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioMago" />

        <RadioButton
            android:id="@+id/radioHerrero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioHerrero" />

        <RadioButton
            android:id="@+id/radioMinero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioMinero" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>