<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="238dp"
        android:layout_height="189dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167">

        <RadioButton
            android:id="@+id/radioEnano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioEnano" />

        <RadioButton
            android:id="@+id/radioElfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioElfo" />

        <RadioButton
            android:id="@+id/radioHobbit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioHobbit" />

        <RadioButton
            android:id="@+id/radioHombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioHombre" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>